# Cuda-OSS

./: CONTRIBUTING.md  README.md  program.md  pyproject.toml
.github/workflows/: ci.yml
kernel_configs/: __init__.py  _utils.py  dsa_forward.py  dsa_forward.toml  matmul.py  matmul.toml  qkv_part_rope.py  qkv_part_rope.toml  rms_norm.py  rms_norm.toml  swiglu_input_quant.py  swiglu_input_quant.toml
kernels/: rms_norm.py
references/: __init__.py
tools/: bench.py  merge_results.py  prepare.py  run_loop.py  visualize.py
