[project]
name = "cuda-evolve"
version = "0.1.0"
description = "Autonomous GPU kernel optimization system driven by AI agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.4.0; sys_platform == 'linux'",
    "triton>=3.0.0; sys_platform == 'linux'",
    "tabulate>=0.9.0",
    "pynvml>=11.5.0; sys_platform == 'linux'",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
